# xm-qa-report-generator

./: .clineignore  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Untitled-1.json  Untitled-2.json  Untitled-3.json  k6_demo.sh  pyproject.toml  pytest.ini  run_demo.sh  run_k6_demo.sh
.clinerules/: 00-readme.md  01-core-standards.md  02-architecture-guardrails.md  03-testing-standards.md  04-docs-and-adr.md  05-module-structure.md  06-performance-and-observability.md  07-repo-navigation.md  08-pr-and-commit-hygiene.md  10-documentation-standards.md  11-logging-conventions.md
.clinerules/workflows/: audit-module.md  quality-gate.md  update-repo-navigation.md
adapters/output/parsers/k6_json_parser/: parser.py
docs/: PERFORMANCE_FUNCTIONAL_SPLIT.md  adr-0001-shared-llm-adapters.md  adr-0002-shared-json-file-writer-adapter.md  plugin-guide.md
docs/adr/: 0001-hexagonal-architecture.md  0002-plugin-architecture.md  0003-pydantic-in-domain.md
dummy_project/: pytest.ini
dummy_project/calculator/: __init__.py  basic.py
dummy_project/tests/: test_errors.py  test_parametrized.py  test_passing.py  test_skipped.py
examples/: README.md
examples/custom_prompts/: concise_prompts.yaml  creative_prompts.yaml
examples/custom_writer/: __init__.py  json_writer.py
examples/hooks/: __init__.py  teams_notifier.py
k6_example/20260228/megatron/: megatron-1.json  megatron-2.json
k6_example/20260228/symbolsservice/: symbolsservice-1.json  symbolsservice-2.json  symbolsservice-3.json
k6_example/20260228/symbolstreeservice/: symbolstreeservice-1.json  symbolstreeservice-2.json  symbolstreeservice-3.json  symbolstreeservice-4.json  symbolstreeservice-6.json  symbolstreeservice-7.json  symbolstreeservice-8.json  symbolstreeservice-9.json
k6_example/20260228/trading/: trading-1.json
k6_example/20260228/tradinghistoricaldata/: tradinghistoricaldata-3.json
k6_example/20260228/vps/: vps-1.json
k6_example/20260228/watchlists/: watchlists-1.json
k6_example/megatron/: megatron-1.json  megatron-2.json
k6_example/reports/: report-1.json  report-2.json  report-3.json
pytest_dummy_project/calculator/: advanced.py
pytest_dummy_project/tests/: conftest.py  test_failures.py  test_slow.py  test_with_output.py
reports/20260228/symbolsservice/: symbolsservice-4.json
reports/20260228/symbolstreeservice/: symbolstreeservice-5.json
reports/20260228/tradinghistoricaldata/: tradinghistoricaldata-1.json  tradinghistoricaldata-2.json
reports/20260228/watchlists/: watchlists-2.json  watchlists-3.json
scripts/: __init__.py  k6_demo.sh  parse_k6_example_20260228.py
src/qa_report_generator/: __init__.py  __main__.py  cli.py  cli_k6.py  config.py  logging_config.py  plugins.py
src/qa_report_generator/adapters/: __init__.py
src/qa_report_generator/adapters/input/: __init__.py
src/qa_report_generator/adapters/output/: __init__.py
src/qa_report_generator/application/: __init__.py  dtos.py  exceptions.py  strategies.py  use_cases.py
src/qa_report_generator/application/dtos/: __init__.py  app_settings.py  k6_extraction.py  parsed_report.py  reporting.py  section_prompt.py
src/qa_report_generator/application/ports/: __init__.py  input.py  output.py
src/qa_report_generator/application/service_definitions/: __init__.py  base.py  prompts.py  schema.py
src/qa_report_generator/application/use_cases/: __init__.py
src/qa_report_generator/config/: __init__.py  logging_config.py  preprocessing.py
src/qa_report_generator/domain/: __init__.py  exceptions.py  models.py  preprocessors.py  value_objects.py
src/qa_report_generator/domain/analytics/: __init__.py  executive_summary.py  failure_clustering.py  flakiness_detector.py  health_metrics.py  k6_metrics.py  models.py  orchestrator.py  pattern_detector.py  quality_metrics.py  report_diff.py  source_payload.py  test_smells.py
src/qa_report_generator/domain/models/: __init__.py  environment.py  failure.py  metrics.py  report_facts.py  test_output.py
src/qa_report_generator/plugins/: __init__.py  registry.py
src/qa_report_generator/plugins/parsers/: __init__.py
src/qa_report_generator/plugins/writers/: __init__.py
src/qa_report_generator/templates/: __init__.py  prompt_loader.py  prompts.yaml  prompts_detailed.yaml  prompts_summary.yaml
src/qa_report_generator_performance/: __init__.py  cli.py  cli_k6.py
src/qa_report_generator_performance/adapters/input/: __init__.py
src/qa_report_generator_performance/adapters/output/: __init__.py
src/qa_report_generator_performance/application/: __init__.py  exceptions.py
src/qa_report_generator_performance/application/dtos/: __init__.py  app_settings.py  k6_extraction.py  llm_usage.py
src/qa_report_generator_performance/application/ports/: __init__.py  input.py  output.py
src/qa_report_generator_performance/application/use_cases/: __init__.py
src/qa_report_generator_performance/config/: __init__.py  logging_config.py
src/shared/: __init__.py
tests/arch/: test_boundaries.py
tests/benchmarks/: __init__.py  test_benchmarks.py
tests/int/: __init__.py  test_diff_reports.py  test_report_generation.py
tests/unit/application/: test_additional_service_schemas.py  test_k6_extraction_dtos.py  test_megatron_schema.py  test_prompt_strategy_selector.py  test_service_definition_prompts.py  test_service_definitions_registry.py  test_trading_schema.py  test_use_cases.py
tests/unit/config/: test_logging_config.py
tests/unit/domain/: test_domain_models.py  test_exceptions.py  test_preprocessing_profiles.py  test_preprocessors.py  test_properties.py
tests/unit/plugins/: test_plugins_registry.py
tests/unit/qa_report_generator_performance/: __init__.py
(+330 files in other folders)
