[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_report_generator_performance", "src/shared"]

[project]
name = "qa-report-generator"
version = "0.1.0"
description = "LLM-powered reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
qa-report-generator-performance = "qa_report_generator_performance.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.6",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
console_output_style = "progress"

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "D203",    # incorrect-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)
    "COM812",  # trailing-comma-missing (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "ANN401",  # allow Any in external interfaces
    "FBT001",  # allow boolean positional args in public APIs
    "FBT002",  # allow boolean defaults in public APIs
    "PLC0415", # allow runtime imports for optional dependencies
    "PLR2004", # allow magic numbers in comparisons
    "RUF012",  # allow mutable class attributes without ClassVar
    "S110",    # allow bare except with pass in non-critical logging
    "BLE001",  # allow broad exception in non-critical logging
    "TRY401",  # allow logging.exception with exception object
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]
"tests/**/__init__.py" = ["D104"]

[tool.ruff.lint.isort]
known-first-party = ["qa_report_generator_performance", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ["src"]
